2012-04-30  Eric Botcazou  <ebotcazou@adacore.com>

	* config/i386/i386.c (ix86_handle_struct_attribute): Use the proper
	predicate to discriminate types.

2012-04-27  Richard Guenther  <rguenther@suse.de>

	PR c/51527
	* convert.c (convert_to_integer): Avoid infinite recursion for
	target-defined built-in types.

2012-04-26  Hans-Peter Nilsson  <hp@axis.com>

	PR target/53120
	* config/cris/cris.md ("*andhi_lowpart_v32")
	("*andqi_lowpart_v32"): Change first input-only operand from
	a (match_operand ...) to (match_dup 0).  Drop alternatives with
	const_int-matching constraints for redundancy.
	("*andhi_lowpart_non_v32", "*andqi_lowpart_non_v32"): Ditto.  Drop
	three-operand alternative.

2012-04-26  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2012-04-23  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*add<mode>_2): Add r/r/0 alternative.
	(*addsi_2_zext): Ditto.
	(*add<mode>_3): Ditto.
	(*addsi_3_zext): Ditto.
	(*add<mode>_5): Ditto.

2012-04-25  Jakub Jelinek  <jakub@redhat.com>

	PR c/52880
	* c-typeck.c (set_nonincremental_init,
	set_nonincremental_init_from_string): Pass true instead of false
	as IMPLICIT to add_pending_init.

2012-04-24  Georg-Johann Lay  <avr@gjlay.de>

	Backport from 2012-04-24 mainline r186768.

	PR target/53065
	* config/avr/avr.h (HARD_REGNO_CALL_PART_CLOBBERED): New hook define.

2012-04-24  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/53085
	* tree-ssa-pre.c (eliminate): Do not eliminate volatile redundant
	stores.

2012-04-24  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/53084
	* varasm.c (compute_reloc_for_constant): Handle ADDR_EXPR
	of MEM_REF.
	(output_addressed_constants): Likewise.

	PR middle-end/52999
	* varasm.c (get_section): Don't ICE for section conflicts with
	built-in section kinds.

2012-04-23  David Edelsohn  <dje.gcc@gmail.com>

	* config/rs6000/sync.md (fetchop_name): Change ior attribute to "or".

2012-04-23  Georg-Johann Lay  <avr@gjlay.de>
