@@ -1,3 +1,11 @@
+2012-04-30  Uros Bizjak  <ubizjak@gmail.com>
+
+	Backport from mainline
+	2012-04-27  Paolo Bonzini  <bonzini@gnu.org>
+
+	PR target/53138
+	* gcc.c-torture/execute/20120427-1.c: New testcase.
+
 2012-04-26  Hans-Peter Nilsson  <hp@axis.com>
 
 	PR target/53120
@@ -28,7 +36,7 @@
 2012-04-23  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimizations/52891
-	* gcc.c-torture/compile/pr52891-1.c: New test.	
+	* gcc.c-torture/compile/pr52891-1.c: New test.
 	* gcc.c-torture/compile/pr52891-2.c: New test.
 
 2012-04-20  Ian Lance Taylor  <iant@google.com>
