@@ -1,3 +1,11 @@
+2012-04-30  Uros Bizjak  <ubizjak@gmail.com>
+
+	Backport from mainline
+	2012-04-27  Paolo Bonzini  <bonzini@gnu.org>
+
+	PR target/53138
+	* config/i386/i386.md (x86_mov<mode>cc_0_m1_neg): Add clobber.
+
 2012-04-30  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* config/i386/i386.c (ix86_handle_struct_attribute): Use the proper
